--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 <article>
   <h2>{{ page.title }}</h2>
   <time datetime="{{ page.date | date_to_xmlschema }}" class="by-line">{{ page.date | date_to_string }}</time>
+  <p style="color: green">{{page.tags| capitalize}}
   {{ content }}
 </article>
 
